--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "btce": "~0.4.4",
     "node-static": "~0.7.2",
     "q": "~0.9.7",
-    "winston": "~0.7.2"
+    "winston": "~0.7.2",
+    "socket.io": "~0.9.16"
   }
 }
