--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "mongoServer": "mongodb://localhost:27017/coingraph",
   "symbols": ["btc_usd", "btc_eur", "ltc_usd", "ltc_eur", "ltc_btc"],
-  "tickerFreq": 5000,
+  "tickerFreq": 60000,
   "logging": {
     "ticker": {
       "filename": "./ticker.log",
@@ -15,5 +15,6 @@
       "timestamp": true,
       "level": "error"
     }
-  }
+  },
+  "web":"./dist"
 }
