--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
     "q": "~0.9.7",
     "winston": "~0.7.2",
     "socket.io": "~0.9.16"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-less": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-replace": "*",
+    "matchdep": "*",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-shell-spawn": "~0.3.0"
   }
 }
