--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io": "~0.9.16"
   },
   "devDependencies": {
+    "matchdep": "*",
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-cssmin": "*",
@@ -24,9 +25,9 @@
     "grunt-contrib-uglify": "*",
     "grunt-contrib-concat": "*",
     "grunt-replace": "*",
-    "matchdep": "*",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-shell-spawn": "~0.3.0"
+    "grunt-shell-spawn": "~0.3.0",
+    "grunt-open": "~0.2.2"
   }
 }
