added readme;using new node-static pattern;removed config.json from repo;updated webapp.conf

--- a/coingraph-webapp.conf
+++ b/coingraph-webapp.conf
@@ -7,7 +7,7 @@
 # You will need to set the environment variables noted below to conform to
 # your use case, and should change the description.
 #
-description "Coingraph Ticksaver: saves btc-e data to database"
+description "Coingraph Webapp: servers html and hosts socket connections"
 
 start on startup
 stop on shutdown
@@ -45,7 +45,7 @@ env NODE_BIN_DIR="/usr/local/bin"
 env NODE_PATH="/usr/local/lib/node_modules"
 env APPLICATION_DIRECTORY="/var/www/coingraph"
 env APPLICATION_START="index.js"
-env LOG="/dev/null"
+env LOG="/var/log/coingraph-webapp.log"
 env PORT="3030"
 
 script
