added fault tolerancy with mongodb;updated upstart scripts for autorestart

--- a/coingraph-webapp.conf
+++ b/coingraph-webapp.conf
@@ -46,7 +46,6 @@ env NODE_PATH="/usr/local/lib/node_modules"
 env APPLICATION_DIRECTORY="/var/www/coingraph"
 env APPLICATION_START="index.js"
 env LOG="/var/log/coingraph-webapp.log"
-env PORT="3030"
 
 script
     # Add the node executables to the path, which includes Forever if it is
@@ -58,8 +57,10 @@ script
     # someone makes an error in application initialization code, or bringing down
     # production servers the same way if a database or other critical service
     # suddenly becomes inaccessible.
-    exec forever --sourceDir $APPLICATION_DIRECTORY -a -l $LOG \
-         --minUptime 5000 --spinSleepTime 2000 start $APPLICATION_START
+    eexec forever --sourceDir $APPLICATION_DIRECTORY \
+        -w --watchDirectory $APPLICATION_DIRECTORY \
+        --killSignal=SIGINT \
+        -a -l $LOG --minUptime 5000 --spinSleepTime 2000 start $APPLICATION_START
 end script
 
 pre-stop script
