--- a/coingraph-ticksaver.conf
+++ b/coingraph-ticksaver.conf
@@ -57,8 +57,10 @@ script
     # someone makes an error in application initialization code, or bringing down
     # production servers the same way if a database or other critical service
     # suddenly becomes inaccessible.
-    exec forever --sourceDir $APPLICATION_DIRECTORY -a -l $LOG \
-         --minUptime 5000 --spinSleepTime 2000 start $APPLICATION_START
+    exec forever --sourceDir $APPLICATION_DIRECTORY \
+        -w --watchDirectory $APPLICATION_DIRECTORY \
+        --killSignal=SIGINT \
+        -a -l $LOG --minUptime 5000 --spinSleepTime 2000 start $APPLICATION_START
 end script
 
 pre-stop script
