--- a/coingraph-webapp.conf
+++ b/coingraph-webapp.conf
@@ -57,7 +57,8 @@ script
     # someone makes an error in application initialization code, or bringing down
     # production servers the same way if a database or other critical service
     # suddenly becomes inaccessible.
-    eexec forever --sourceDir $APPLICATION_DIRECTORY \
+    chdir $APPLICATION_DIRECTORY
+    exec forever --sourceDir $APPLICATION_DIRECTORY \
         -w --watchDirectory $APPLICATION_DIRECTORY \
         --killSignal=SIGINT \
         -a -l $LOG --minUptime 5000 --spinSleepTime 2000 start $APPLICATION_START
