--- a/coingraph-ticksaver.conf
+++ b/coingraph-ticksaver.conf
@@ -57,6 +57,7 @@ script
     # someone makes an error in application initialization code, or bringing down
     # production servers the same way if a database or other critical service
     # suddenly becomes inaccessible.
+    chdir $APPLICATION_DIRECTORY
     exec forever --sourceDir $APPLICATION_DIRECTORY \
         -w --watchDirectory $APPLICATION_DIRECTORY \
         --killSignal=SIGINT \
