updated monit scripts

--- a/coingraph-webapp.conf
+++ b/coingraph-webapp.conf
@@ -46,6 +46,7 @@ env NODE_PATH="/usr/local/lib/node_modules"
 env APPLICATION_DIRECTORY="/var/www/coingraph"
 env APPLICATION_START="index.js"
 env LOG="/var/log/coingraph-webapp.log"
+env PIDFILE="/var/run/coingraph.pid"
 
 script
     # Add the node executables to the path, which includes Forever if it is
@@ -61,6 +62,7 @@ script
     exec forever --sourceDir $APPLICATION_DIRECTORY \
         -w --watchDirectory $APPLICATION_DIRECTORY \
         --killSignal=SIGINT \
+        --pidFile=$PIDFILE
         -a -l $LOG --minUptime 5000 --spinSleepTime 2000 start $APPLICATION_START
 end script
 
