--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coingraph",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-shell-spawn": "~0.3.0",
     "grunt-open": "~0.2.2",
-    "grunt-browserify": "~2.0.3"
+    "grunt-browserify": "~2.0.3",
+    "grunt-htmlrefs": "^0.5.0"
   }
 }
